--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/GLFW"]
 	path = vendor/GLFW
 	url = git@github.com:renkin4/glfw.git
+[submodule "vendor/glm"]
+	path = vendor/glm
+	url = git@github.com:renkin4/glm.git
