--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/glm"]
 	path = vendor/glm
 	url = git@github.com:renkin4/glm.git
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:renkin4/imgui.git
