--- a/VzApplicationLauncher/imgui.ini
+++ b/VzApplicationLauncher/imgui.ini
@@ -4,12 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
-Size=339,180
+Pos=1225,0
+Size=375,900
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=610,108
-Size=550,680
+Pos=0,0
+Size=1223,900
 Collapsed=0
+DockId=0x00000003,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1600,900
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=81,51 Size=1600,900 Split=X
+  DockNode  ID=0x00000003 Parent=0xF2944C7F SizeRef=378,601 CentralNode=1 HiddenTabBar=1 Selected=0xE87781F4
+  DockNode  ID=0x00000004 Parent=0xF2944C7F SizeRef=375,601 Selected=0xD00C9CD4
 
