--- a/VzApplicationLauncher/imgui.ini
+++ b/VzApplicationLauncher/imgui.ini
@@ -13,7 +13,7 @@ DockId=0x00000004,0
 Pos=0,0
 Size=1223,900
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -21,7 +21,7 @@ Size=1600,900
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=81,51 Size=1600,900 Split=X
-  DockNode  ID=0x00000003 Parent=0xF2944C7F SizeRef=378,601 CentralNode=1 HiddenTabBar=1 Selected=0xE87781F4
-  DockNode  ID=0x00000004 Parent=0xF2944C7F SizeRef=375,601 Selected=0xD00C9CD4
+DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=34,57 Size=1600,900 Split=X Selected=0xE87781F4
+  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=846,900 CentralNode=1 Selected=0xE87781F4
+  DockNode  ID=0x00000004 Parent=0xF2944C7F SizeRef=375,900 Selected=0xD00C9CD4
 
