--- a/VzApplicationLauncher/imgui.ini
+++ b/VzApplicationLauncher/imgui.ini
@@ -1,27 +1,28 @@
+[Window][Vizzio Workspace]
+Pos=0,0
+Size=1600,900
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=1225,0
-Size=375,900
+Pos=60,60
+Size=339,180
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=1223,900
+Pos=651,76
+Size=550,680
 Collapsed=0
-DockId=0x00000001,0
 
-[Window][DockSpace Demo]
+[Window][Hello]
 Pos=0,0
 Size=1600,900
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=34,57 Size=1600,900 Split=X Selected=0xE87781F4
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=846,900 CentralNode=1 Selected=0xE87781F4
-  DockNode  ID=0x00000004 Parent=0xF2944C7F SizeRef=375,900 Selected=0xD00C9CD4
+DockSpace ID=0x4A938076 Window=0x2B2A6A86 Pos=131,45 Size=1600,900 CentralNode=1 Selected=0x9B88CA06
 
